# rust_hello_triangle

./: Cargo.toml  readme.md
lib/engine/: Cargo.toml
lib/engine/src/: game_state.rs  lib.rs  shader_program.rs  vao_builder.rs
lib/engine/src/ecs/: generational_entries.rs  generational_entry.rs  generational_index.rs  mod.rs
lib/engine/src/vao_builder/: buffer_component.rs
src/: camera.rs  context.rs  dummy.rs  event_handler.rs  game_builder.rs  game_state.rs  game_state_renderer.rs  main.rs  model_creator.rs  point.rs  shader_program.rs  shader_program_builder.rs  teapot.rs  triangle_creator.rs  vao_builder.rs
src/glsl/: fragment.glsl  geometry.glsl  vertex.glsl
src/glsl/point_render/: fragment.glsl  geometry.glsl  vertex.glsl
src/vao_builder/: attrib_data.rs  attrib_parameters.rs
