[package]
name = "rust_hello_triangle"
version = "0.1.0"
authors = ["PeerHenry <peerhenry@gmail.com>"]
edition = "2018"

[dependencies]
libc = "*"
cgmath = "0.15.0"
gl = "*"
glutin = "0.9.2"
image = "*"
engine = { path = "lib/engine" }

[[bin]]
name = "triangle"
path = "src/main.rs"

[[bin]]
name = "dummy"
path = "./src/dummy.rs"